🐌😋 Checkpoint ./FootLocker.css:10731925/189

--- a/FootLocker.css
+++ b/FootLocker.css
@@ -3,6 +3,7 @@ h2{
   color:red
 }
 
-
-
-
+body{background:black}
+p {color:white;text-align:left}
+ol {color:white;text-align:left}
+h1 {color:white;text-align:center}
